Searchbar on mobile + upload fixes

--- a/webapp/finder/find/theme/styles/theme.css
+++ b/webapp/finder/find/theme/styles/theme.css
@@ -97,7 +97,9 @@ body {
  
 .filters-container {
 	height: 90px;
+	padding-top:30px;
 }
+
 /*
 .emsubnav {
 	background-color: #0f2228;
@@ -2245,13 +2247,68 @@ td.checkbox input, th.firstheader input {
 
 .navtabsright-text { display: none;}
 
+.createmediacontent {
+	padding:20px;
+	background-color: #fff;
+}
+.createmediapaneldialog .createmediasidebar a {
+	display:block;
+	line-height: 2;
+	padding:2px 6px;
+	background-color:#efefef;
+	border-bottom:1px solid #ccc;
+}
+.createmediapaneldialog .createmediasidebar a:hover {
+	background-color: #666;
+	color:#eee;
+	text-decoration: none;
+}
+
+.createmediapaneldialog .createmedia-selected a,
+.createmediapaneldialog .createmedia-selected a:hover {
+	background-color: #fff;
+	color:#333;
+}
+
+#createmediapanel .btnthumbnail {
+	background-color: transparent;
+    border: 1px solid transparent;
+    min-height: 270px;
+    display:  block;
+    padding: 10px;
+    margin: 10px;
+}
+#createmediapanel a.btnthumbnail:hover {
+    border: 1px solid #eee;
+    border-radius: 8px;
+    background-color: #C9E8F2;
+    text-decoration: none;
+}
+
+#createmediapanel .gobacklink
+{
+	width: 100px;
+	display:block;
+	margin: 20px;
+	text-decoration: none;
+}
+
+
+
 @media (max-width: 1024px) {
+	
+	.filters-container {
+		padding:20px 0 0;
+		height: 40px;
+	}
+	.searchbarheadertable {
+    	width: 520px;
+    	margin:0 auto
+	}
 	.emnav .collectionpicker {
 		min-width: 140px;
 	}	
 	.mediacenterheader .navbar-quicksearch {
-		position: absolute;
-		display:none;
     	left: 0;
     	z-index: 10;
 	}
@@ -2285,7 +2342,23 @@ td.checkbox input, th.firstheader input {
     	width: 360px;
 	}
 }
-.quicksearch-toggler {}
+
+
+@media (max-width: 768px) {
+	.mediaappcontent .col-content-main {
+		margin-top:20px;
+	}
+	.filters-container {
+		clear:left;
+		padding:5px 10px 0 35px
+	}
+	.searchbarheadertable {
+    	width: 100%;
+	}
+	.createmediacontent {
+	padding:20px 5px;
+	}
+}
 
 
 
@@ -4530,52 +4603,6 @@ table.table-padding tbody td {
     font-size: .9rem;
     font-weight: 400;
     line-height: 1;
-}
-
-.createmediacontent {
-	padding:20px;
-	background-color: #fff;
-}
-.createmediapaneldialog .createmediasidebar a {
-	display:block;
-	line-height: 2;
-	padding:2px 6px;
-	background-color:#efefef;
-	border-bottom:1px solid #ccc;
-}
-.createmediapaneldialog .createmediasidebar a:hover {
-	background-color: #666;
-	color:#eee;
-	text-decoration: none;
-}
-
-.createmediapaneldialog .createmedia-selected a,
-.createmediapaneldialog .createmedia-selected a:hover {
-	background-color: #fff;
-	color:#333;
-}
-
-#createmediapanel .btnthumbnail {
-	background-color: transparent;
-    border: 1px solid transparent;
-    min-height: 270px;
-    display:  block;
-    padding: 10px;
-    margin: 10px;
-}
-#createmediapanel a.btnthumbnail:hover {
-    border: 1px solid #eee;
-    border-radius: 8px;
-    background-color: #C9E8F2;
-    text-decoration: none;
-}
-
-#createmediapanel .gobacklink
-{
-	width: 100px;
-	display:block;
-	margin: 20px;
-	text-decoration: none;
 }
 
 ul.embuttons li a span {
